Revert "Update index.html"
This reverts commit 879dae52dcb3aed1f204ae41f785ef93aa640b1f.

--- a/network/index.html
+++ b/network/index.html
@@ -32,9 +32,22 @@
     <div id="title"></div>
     <div id="titletext"></div>
     
+<div id="legend">
+	<div class="box">
+		<h2>Legend:</h2>
+		<dl>
+		<dt class="node"></dt>
+		<dd></dd>
+		<dt class="edge"></dt>
+		<dd></dd>
+		<dt class="colours"></dt>
+		<dd></dd>		
+		</dl>
+	</div>
+</div> 
     <div class="b1">
     <form>
-      <div id="search" class="cf"><h2>Найди НКО</h2>
+      <div id="search" class="cf"><h2>Search:</h2>
         <input type="text" name="search" value="Search by name" class="empty"/><div class="state"></div>
         <div class="results"></div>
       </div>
