--- a/network/index.html
+++ b/network/index.html
@@ -31,7 +31,12 @@
 		<div id="maintitle"></div>
     <div id="title"></div>
     <div id="titletext"></div>
-    
+    <div class="info cf">
+      <dl>
+        <dt class="moreinformation"></dt>
+        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
+      </dl>
+    </div>
 <div id="legend">
 	<div class="box">
 		<h2>Legend:</h2>
@@ -50,6 +55,10 @@
       <div id="search" class="cf"><h2>Search:</h2>
         <input type="text" name="search" value="Search by name" class="empty"/><div class="state"></div>
         <div class="results"></div>
+      </div>
+      <div class="cf" id="attributeselect"><h2>Group Selector:</h2>
+        <div class="select">Select Group</div>
+	<div class="list cf"></div>
       </div>
     </form>
     </div>
