--- a/network/index.html
+++ b/network/index.html
@@ -56,9 +56,9 @@
 	</div>
 <div id="attributepane">
 <div class="text">
-	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
+	<div title="Close" class="left-close returntext"><div class="c cf"><span>Вернуться к графу</span></div></div>	
 <div class="headertext">
-	<span>Information Pane</span>
+	<span>Информация</span>
 </div>	
   <div class="nodeattributes">
     <div class="name"></div>
