--- a/network/index.html
+++ b/network/index.html
@@ -63,7 +63,7 @@
   <div class="nodeattributes">
     <div class="name"></div>
 	<div class="data"></div>
-    <div class="p">Связана с:</div>
+    <div class="p"></div>
     <div class="link">
       <ul>
       </ul>
